client/src/views/Webshop/WebshopFrontPage/WebshopFrontpage.css
.webshopBannerContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 10px;
  color: white;
}

.webshopBannerContainer p {
  z-index: 1;
}

.webshopBannerContainer h1 {
  z-index: 1;
}

.webshopBannerImage {
  height: 100vh;
  background-size: cover;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  margin-bottom: 50px;
  animation: fadeIn 2s;
  box-shadow: rgba(149, 157, 165, 0.5) 0px 8px 24px;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.webshopBannerImage::before {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100vh;
  display: block;
  background-color: rgba(0, 0, 0, 0.4);
  transition: all 200ms ease-in-out;
}

.webshopEditBanner {
  position: fixed;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  top: 0;
  left: 0;
  z-index: 1;
  width: 100%;
  display: flex;
  padding: 15px;
  background: white;
  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
}

.webshopEditBanner > a {
  font-family: "Roboto", sans-serif;
  color: rgb(129, 129, 129);
}

.webshopDescription {
  text-align: center;
  margin: 5% 10%;
}

